--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2 class="text-2xl text-gray-800 font-black">Sample project</h2>
       <div class="w-2/3">
         <p class="pt-4 leading-tight font-light text-gray-500">
-          This is a dashboard showing the health of company culture. The doopoll Culture Barometer is based on management scorecard methodology. This prototype shows how live data from doopoll can be extracted and reused by other tools using the Zapier integration. Scores on this dashboard are automatically updated every 15 minutes.
+          This is a dashboard showing the health of company culture. The <a href="https://doopoll.co/">doopoll</a> Culture Barometer is based on management scorecard methodology. This prototype shows how live data from doopoll can be extracted and reused by other tools using the Zapier integration. Scores on this dashboard are automatically updated every 15 minutes.
         </p>
       </div>
     </div>
